--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,13 +4,13 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Modal </h4>
+        <h4 class="modal-title"> {{title}}</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
       <!-- Modal body -->
       <div class="modal-body">
-        {{title}}
+        {{description}}
       </div>
 
       <!-- Modal footer -->
